# c-server_demo

./: .gitignore  CMakeLists.txt  README.md  list_open_server_sockets.sh  list_processes.sh  todo.txt
src/: client.c  server.c
tcp_socket/: CMakeLists.txt  server.c
unix_socket/: CMakeLists.txt  client.c  server.c  server_and_client.c  socket_unix.c  socket_unix.h
